// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSignature Registration Form should render form step 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        data-testid="MultiSignatureRegistrationForm--form-step"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-4"
          >
            <h1
              class="mb-0 text-2xl"
              data-testid="header__title"
            >
              Multisignature Registration
            </h1>
            <div
              class="text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Register Multisignature details below.
            </div>
          </div>
        </div>
        <div
          class="pt-6 space-y-6"
        >
          <div>
            <div
              class="SubForm__SubFormWrapper-sc-1x20s74-0 eYhvbV"
            >
              <fieldset
                class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
              >
                <label
                  class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                  data-testid="FormLabel"
                  for="address"
                >
                  Multisignature Participant
                </label>
                <div>
                  <div
                    class="flex relative items-center w-full text-left"
                    data-testid="SelectRecipient__wrapper"
                  >
                    <div
                      class="relative w-full"
                    >
                      <div
                        class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy sr-only"
                      >
                        <div
                          class="relative flex flex-1 h-full"
                        >
                          <input
                            aria-invalid="false"
                            class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                            data-testid="select-list__input"
                            name="address"
                            readonly=""
                            tabindex="-1"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="relative w-full"
                      >
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="SelectRecipient__dropdown-menu"
                          role="combobox"
                        >
                          <label
                            for="SelectRecipient__dropdown-input"
                            id="SelectRecipient__dropdown-label"
                          />
                          <div
                            class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
                          >
                            <div
                              class="flex items-center"
                            >
                              <div
                                class="Circle__CircleWrapper-sc-d5u41q-0 cPUFYC bg-theme-secondary-200 border-theme-secondary-200 dark:bg-theme-secondary-700 dark:border-theme-secondary-700 ring-theme-background"
                              />
                            </div>
                            <div
                              class="relative flex flex-1 h-full"
                            >
                              <input
                                aria-autocomplete="list"
                                aria-controls="SelectRecipient__dropdown-menu"
                                aria-invalid="false"
                                aria-labelledby="SelectRecipient__dropdown-label"
                                autocomplete="off"
                                class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
                                data-testid="SelectDropdown__input"
                                id="SelectRecipient__dropdown-input"
                                name="address"
                                placeholder="Select option"
                                value=""
                              />
                            </div>
                            <div
                              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                            >
                              <div
                                class=""
                              >
                                <div
                                  class="flex items-center cursor-pointer"
                                  data-testid="SelectRecipient__select-recipient"
                                >
                                  <div
                                    class="sc-bdnxRM NjstW"
                                    height="20"
                                    width="20"
                                  >
                                    <svg>
                                      user.svg
                                    </svg>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <ul
                            aria-labelledby="SelectRecipient__dropdown-label"
                            class="styles__SelectOptionsList-sc-120rtxy-0 eqsPyr"
                            id="SelectRecipient__dropdown-menu"
                            role="listbox"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </fieldset>
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 fyuekd my-4 w-full"
                disabled=""
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Add Participant
                </div>
              </button>
            </div>
            <div
              class="mt-3 border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              <div
                class="RecipientList__RecipientListWrapper-sc-16fvbk8-0 bCfwoA"
              >
                <div
                  class="Table__TableWrapper-sc-1gcp0fb-0 fDAVsO -mt-3"
                  role="table"
                >
                  <table
                    cellpadding="0"
                    class="table-auto"
                  >
                    <thead>
                      <tr
                        class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                        role="row"
                      >
                        <th
                          class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                          colspan="1"
                          data-testid="table__th--0"
                          role="columnheader"
                        >
                          <div
                            class="flex flex-inline align-top hidden"
                          >
                            <div>
                              Avatar
                            </div>
                          </div>
                        </th>
                        <th
                          class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                          colspan="1"
                          data-testid="table__th--1"
                          role="columnheader"
                        >
                          <div
                            class="flex flex-inline align-top hidden"
                          >
                            <div>
                              Address
                            </div>
                          </div>
                        </th>
                        <th
                          class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                          colspan="1"
                          data-testid="table__th--2"
                          role="columnheader"
                        >
                          <div
                            class="flex flex-inline align-top hidden"
                          >
                            <div>
                              Action
                            </div>
                          </div>
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      role="rowgroup"
                    >
                      <tr
                        class="flex border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                        data-testid="recipient-list__recipient-list-item"
                      >
                        <td
                          class="flex-none py-6"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                            >
                              <img
                                alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              />
                            </div>
                          </div>
                        </td>
                        <td
                          class="flex-1 py-6 ml-5 w-28"
                        >
                          <div
                            class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                          >
                            <span>
                              Participant #1
                            </span>
                          </div>
                          <div
                            class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                          >
                            <span
                              class="font-semibold text-base text-theme-text"
                              data-testid="Address__alias"
                            >
                              <span
                                class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                                data-testid="TruncateEnd"
                              >
                                ARK Wallet 1
                              </span>
                            </span>
                            <span
                              class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                              data-testid="Address__address"
                            >
                              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                            </span>
                          </div>
                        </td>
                        <td
                          class="flex-none py-6 ml-3"
                        >
                          <span
                            class="inline-block"
                          >
                            <button
                              class="OriginalButton__StyledButton-sc-o0fs2j-0 fyuekd"
                              data-testid="recipient-list__remove-recipient"
                              disabled=""
                              type="button"
                            >
                              <div
                                class="flex items-center space-x-2"
                              >
                                <div
                                  class="py-1"
                                >
                                  <div
                                    class="sc-bdnxRM AFVmm"
                                    height="16"
                                    width="16"
                                  >
                                    <svg>
                                      trash.svg
                                    </svg>
                                  </div>
                                </div>
                              </div>
                            </button>
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
          <fieldset
            class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="minParticipants"
            >
              Minimum Required Signatures
            </label>
            <div
              class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
            >
              <div
                class="relative flex flex-1 h-full"
              >
                <input
                  class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                  data-testid="MultiSignatureRegistrationForm__min-participants"
                  max="2"
                  min="2"
                  name="minParticipants"
                  type="number"
                  value="2"
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <div
                  class=""
                >
                  <span
                    class="pointer-events-none font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    out of 2
                  </span>
                </div>
              </div>
            </div>
          </fieldset>
          <fieldset
            class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
            </label>
            <div
              class="relative"
            >
              <div
                class="Input__InputWrapperStyled-sc-1i8sd1r-0 iqZIWh"
                disabled=""
              >
                <div
                  class="relative flex flex-1 h-full"
                >
                  <input
                    class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full text-theme-secondary-text"
                    data-testid="InputCurrency"
                    disabled=""
                    name="fee"
                    type="text"
                    value="5"
                  />
                </div>
                <div
                  class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600 divide-none"
                >
                  <div
                    class=""
                  >
                    <div
                      class="flex items-center"
                    >
                      <div
                        class="flex flex-col justify-between border-l h-14 -mr-4 w-10 text-theme-secondary-700 dark:border-theme-secondary-700 border-theme-secondary-300"
                      >
                        <button
                          class="InputFeeAdvancedAddon__ArrowButtonStyled-sc-bh9n8o-0 bwAUBK"
                          data-testid="InputFeeAdvanced__up"
                          disabled=""
                          type="button"
                        >
                          <div
                            class="sc-bdnxRM AkeAK"
                            height="10"
                            width="10"
                          >
                            <svg>
                              chevron-up-small.svg
                            </svg>
                          </div>
                        </button>
                        <button
                          class="InputFeeAdvancedAddon__ArrowButtonStyled-sc-bh9n8o-0 gmyhdQ"
                          data-testid="InputFeeAdvanced__down"
                          disabled=""
                          type="button"
                        >
                          <div
                            class="sc-bdnxRM AkeAK"
                            height="10"
                            width="10"
                          >
                            <svg>
                              chevron-down-small.svg
                            </svg>
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSignature Registration Form should render review step 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        data-testid="MultiSignature__review-step"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-4"
          >
            <h1
              class="mb-0 text-2xl"
              data-testid="header__title"
            >
              Transaction Review
            </h1>
            <div
              class="text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Review the transaction details below.
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 guMZnB no-ligatures"
          data-testid="TransactionNetwork"
        >
          <div
            class="flex-1 space-y-2 w-40 whitespace-nowrap"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
            >
              Cryptoasset
            </div>
            <div
              class="flex items-center font-semibold"
            >
              ARK Devnet
            </div>
          </div>
          <div
            aria-label="ARK Devnet"
            class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
            data-testid="NetworkIcon-ARK-ark.devnet"
          >
            <div
              class="sc-bdnxRM NjstW"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
          data-testid="TransactionSender"
        >
          <div
            class="flex-1 space-y-2 w-40 whitespace-nowrap"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
            >
              Sender
            </div>
            <div
              class="flex items-center font-semibold"
            >
              <div
                class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
              >
                <span
                  class="font-semibold text-base text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center -space-x-1"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2 w-40 whitespace-nowrap"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
            >
              Multisignature Participants
            </div>
            <div
              class="flex items-center font-semibold"
            >
              <div
                class="RecipientList__RecipientListWrapper-sc-16fvbk8-0 bCfwoA"
              >
                <div
                  class="Table__TableWrapper-sc-1gcp0fb-0 fDAVsO -mt-3"
                  role="table"
                >
                  <table
                    cellpadding="0"
                    class="table-auto"
                  >
                    <thead>
                      <tr
                        class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                        role="row"
                      >
                        <th
                          class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                          colspan="1"
                          data-testid="table__th--0"
                          role="columnheader"
                        >
                          <div
                            class="flex flex-inline align-top hidden"
                          >
                            <div>
                              Avatar
                            </div>
                          </div>
                        </th>
                        <th
                          class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                          colspan="1"
                          data-testid="table__th--1"
                          role="columnheader"
                        >
                          <div
                            class="flex flex-inline align-top hidden"
                          >
                            <div>
                              Address
                            </div>
                          </div>
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      role="rowgroup"
                    >
                      <tr
                        class="flex items-center py-4 border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                        data-testid="recipient-list__recipient-list-item"
                      >
                        <td>
                          <div
                            class="Avatar__AvatarWrapper-sc-18vw8a4-0 fuPYca flex-shrink-0"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                            >
                              <img
                                alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              />
                            </div>
                          </div>
                        </td>
                        <td
                          class="flex-1 ml-4 w-28"
                        >
                          <div
                            class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                          >
                            <span
                              class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                              data-testid="Address__address"
                            >
                              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                            </span>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="flex items-center py-4 border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                        data-testid="recipient-list__recipient-list-item"
                      >
                        <td>
                          <div
                            class="Avatar__AvatarWrapper-sc-18vw8a4-0 fuPYca flex-shrink-0"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                            >
                              <img
                                alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                                title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                              />
                            </div>
                          </div>
                        </td>
                        <td
                          class="flex-1 ml-4 w-28"
                        >
                          <div
                            class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                          >
                            <span
                              class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                              data-testid="Address__address"
                            >
                              D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                            </span>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures -mt-4"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2 w-40 whitespace-nowrap"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
            >
              Minimum Required Signatures
            </div>
            <div
              class="flex items-center font-semibold"
            >
              <div
                class="flex items-center space-x-1 font-semibold"
              >
                <span>
                  2
                </span>
                <span
                  class="text-theme-secondary-500"
                >
                  out of 2
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-2"
        >
          <div
            class="rounded-lg border border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="relative p-4"
            >
              <div
                class="flex divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
              >
                <div
                  class="flex flex-col justify-center py-2 px-4 w-1/2"
                >
                  <span
                    class="TotalAmountBox__AmountLabel-sc-aeus64-0 fOdPzL"
                  >
                    Transaction Amount
                  </span>
                  <span
                    class="whitespace-nowrap mt-1 text-lg font-semibold"
                    data-testid="Amount"
                  >
                    0 DARK
                  </span>
                </div>
                <div
                  class="flex flex-col justify-center py-2 px-4 w-1/2 text-right"
                >
                  <span
                    class="TotalAmountBox__AmountLabel-sc-aeus64-0 fOdPzL"
                  >
                    Transaction Fee
                  </span>
                  <span
                    class="whitespace-nowrap mt-1 text-lg font-semibold"
                    data-testid="Amount"
                  >
                    5 DARK
                  </span>
                </div>
              </div>
              <div
                class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2"
              >
                <div
                  class="py-2 ml-px bg-theme-background text-theme-secondary-900 dark:text-theme-secondary-600"
                >
                  <div
                    class="sc-bdnxRM AFVmm"
                    height="16"
                    width="16"
                  >
                    <svg>
                      plus.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex flex-col items-center py-6 rounded-b-lg border-t border-theme-secondary-300 justfiy-center bg-theme-secondary-100 dark:border-theme-secondary-800 dark:bg-theme-secondary-800"
            >
              <span
                class="TotalAmountBox__AmountLabel-sc-aeus64-0 fOdPzL"
              >
                Total Amount
              </span>
              <span
                class="whitespace-nowrap text-2xl font-bold"
                data-testid="Amount"
              >
                5 DARK
              </span>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSignature Registration Form should render transaction details 1`] = `
<DocumentFragment>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 gxyXCF no-ligatures"
    data-testid="TransactionFee"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
      >
        Transaction Fee
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <span
          class="whitespace-nowrap"
          data-testid="Amount"
        >
          5 DARK
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
